# simple_whatstqr

./: .gitignore  README.md  pyproject.toml
src/whatstqr/: __init__.py  core.py
tests/: test_whatstqr.py
