[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatstqr"
version = "0.1.0"
description = "Generate WhatsApp QR codes in one line of Python."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "qrcode[pil]>=8.0",
]
keywords = ["whatsapp", "qr-code", "python", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-username/whatstqr"
Repository = "https://github.com/your-username/whatstqr"
Issues = "https://github.com/your-username/whatstqr/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
